k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
spec:
  selector:
    app: flask-api
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
